--- a/safebites-web/package.json
+++ b/safebites-web/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
